# django-management-command-log

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG  CHANGELOG.md  LICENSE  README  README.md  README.rst  manage.py  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: tox.yml
command_log/: __init__.py  admin.py  apps.py  bases.py  commands.py  models.py
command_log/management/commands/: base.py  truncate_management_command_log.py
command_log/migrations/: 0001_initial.py  0002_add_error_to_log.py  0002_managementcommandlog_exit_code.py  0003_managementcommandlog_truncate_at.py
command_log/utils/: signals.py
tests/: settings.py  test_bases.py  test_commands.py  test_django_command_log.py  test_models.py  test_settings.py  urls.py
tests/management/commands/: test_command.py  test_transaction_command.py
tests/utils/: test_signals.py
