[tool.poetry]
name = "django-command-log"
version = "1.0"
description = "Django management command auditing app"
authors = ["YunoJuno <code@yunojuno.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yunojuno/django-management-command-log"
repository = "https://github.com/yunojuno/django-management-command-log"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
packages = [
    { include = "command_log" }
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2 || ^3.0 || ^4.0"

[tool.poetry.dev-dependencies]
black = {version="*", allow-prereleases=true}
coverage = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-blind-except = "*"
flake8-docstrings = "*"
flake8-logging-format = "*"
flake8-print = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pylint-django = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
