[tool.poetry]
name = "django-command-log"
version = "2.0"
description = "Django management command auditing app"
authors = ["YunoJuno <code@yunojuno.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yunojuno/django-management-command-log"
repository = "https://github.com/yunojuno/django-management-command-log"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "command_log" }
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2 || ^4.0"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-blind-except = "*"
flake8-docstrings = "*"
flake8-logging-format = "*"
flake8-print = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
pylint-django = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
